@@ -1,3 +1,8 @@
+2328.	[bug]		Add AAAA addresses for A.ROOT-SERVERS.NET,
+			F.ROOT-SERVERS.NET, H.ROOT-SERVERS.NET,
+			J.ROOT-SERVERS.NET, K.ROOT-SERVERS.NET and
+			M.ROOT-SERVERS.NET.
+
 2326.	[bug]		It was possible to trigger a INSIST in the acache
 			processing.
 
